# blog

./: .gitignore  .pre-commit-config.yaml.example  .stylelintrc.json  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml
.github/actions/build-docker-image/: action.yml
.github/workflows/: docker-tests.yml  frontend-tests.yml  python-test.yml
deployment/: entrypoint.sh  tests.sh
requirements/: common.txt  dev.txt
src/: .coveragerc  .env.example  manage.py  mypy_plugin.py  pytest.ini
src/blog/: urls.py  wsgi.py
src/blog/application/queries/: health.py
src/blog/content/: models.py
src/blog/content/migrations/: 0001_initial.py  0002_article.py  max_migration.txt
src/blog/home/: models.py
src/blog/home/migrations/: 0001_initial.py  0002_homepage_introduction_homepage_logo.py  max_migration.txt
src/blog/search/: views.py
src/blog/settings/: __init__.py  base.py  blog.py  interfaces.py  mixins.py
src/blog/static/css/: blog.css
src/blog/templates/: base.html
src/blog/templates/content/: article.html  category.html
src/blog/templates/home/: home_page.html
src/blog/templates/includes/: footer.html  header.html  nav.html
src/blog/website/: models.py
src/blog/website/migrations/: 0001_initial.py  0002_blogsettings_banner_blogsettings_banner_color_and_more.py  0003_alter_blogsettings_banner_color.py  max_migration.txt
src/blog/website/templatetags/: navigation_tags.py
src/cli/: _commands.py  base.py  main.py
src/cli/ci/: _base.py  approval_bot.py  python_tests.py
src/cli/django/: management.py
src/cli/docker/: tests.py
src/cli/python/: django_tests.py  linters.py  tests.py
src/localdev/settings/: __init__.py  base.py  blog.py  interfaces.py  mixins.py
src/scripts/: __init__.py  base.py
src/scripts/ci/: _base.py  docker.py  front_tests.py  python_tests.py
src/scripts/django/: management.py
src/scripts/docker/: tests.py
src/scripts/python/: django_tests.py  linters.py  tests.py
src/tests/: confest.py  conftest.py  utils.py
src/tests/example/: test_nothing.py
src/tests/factories/: auth.py  category.py  content.py  home.py
src/tests/fixtures/: __init__.py  auth.py  context.py  home.py
src/tests/integration/: conftest.py
src/tests/integration/interfaces/agnostic/website/templatetags/: test_navigation_tags.py
src/tests/integration/interfaces/blog_site/: test_health.py  test_views.py
src/tests/integration/interfaces/blog_site/content/: test_models.py
src/tests/integration/interfaces/blog_site/home/: test_models.py
src/tests/integration/interfaces/blog_site/website/templatetags/: test_navigation_tags.py
src/tests/settings/: __init__.py  base.py  blog.py  interfaces.py
src/tests/unit/: test_example.py
